<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="700dp"
    tools:context=".calculateActivity">
    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/title_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/weight_cardView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="50dp"
        android:background="#6DC5BC"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#6DC5BC">
            <TextView
                android:id="@+id/weight_counter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/weight_counter_txt"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="#0E0E0E"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/weight_title_text" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/weight_btn_inc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:backgroundTint="@android:color/holo_blue_light"
                    app:maxImageSize="35dp"
                    app:srcCompat="@drawable/plus"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="128dp" />
                <View
                    android:layout_width="20dp"
                    android:layout_height="0dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/weight_btn_dec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@android:color/holo_blue_light"
                    app:maxImageSize="35dp"
                    app:srcCompat="@drawable/minus"
                    tools:layout_editor_absoluteX="120dp"
                    tools:layout_editor_absoluteY="128dp" />
            </LinearLayout>
            <TextView
                android:id="@+id/weight_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/weight_title_txt"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/age_cardView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="12dp"
        android:background="#6DC5BC"
        android:visibility="visible"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#6DC5BC">
            <TextView
                android:id="@+id/age_counter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/age_counter_txt"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/age_btn_inc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_blue_light"
                    android:clickable="true"
                    android:focusable="true"
                    app:backgroundTint="@android:color/holo_blue_light"
                    app:maxImageSize="35dp"
                    app:srcCompat="@drawable/plus"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="128dp" />
                <View
                    android:layout_width="20dp"
                    android:layout_height="0dp" />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/age_btn_dec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@android:color/holo_blue_light"
                    app:maxImageSize="35dp"
                    app:srcCompat="@drawable/minus"
                    tools:layout_editor_absoluteX="120dp"
                    tools:layout_editor_absoluteY="128dp" />
            </LinearLayout>
            <TextView
                android:id="@+id/age_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/age_title_txt"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/height_cardView"
        android:layout_width="334dp"
        android:layout_height="220dp"

        android:layout_marginTop="32dp"
        android:background="#6DC5BC"
        app:cardCornerRadius="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_cardView">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#6DC5BC"
            android:paddingBottom="16dp">
            <TextView
                android:id="@+id/height_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_title_txt"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height_title_text">
                <androidx.cardview.widget.CardView
                    android:id="@+id/feet_cardView"
                    android:layout_width="120dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#00009688"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/holo_blue_dark">

                        <NumberPicker
                            android:id="@+id/feet_picker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#00009688"

                            android:theme="@style/NumberPickerTheme"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/feet_title"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/feet_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/ft"
                            android:textColor="@color/black"
                            android:textSize="24sp"

                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <View
                    android:layout_width="24dp"
                    android:layout_height="0dp" />
                <androidx.cardview.widget.CardView
                    android:id="@+id/inch_cardView"
                    android:layout_width="120dp"
                    android:layout_height="140dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:background="@android:color/holo_blue_dark">
                        <NumberPicker
                            android:id="@+id/inch_picker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#00009688"

                            android:theme="@style/NumberPickerTheme"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/inch_titile"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/inch_titile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginEnd="8dp"
                            android:text="@string/in"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_compat_inset_shadow"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_design"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textAlignment="gravity"
        android:text="@string/button_text"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_cardView"
        app:layout_constraintVertical_bias="0.187" />
</androidx.constraintlayout.widget.ConstraintLayout>